--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
  
     "development": { 
-        "username": "root",
-        "password": "password", 
-        "database": "triplan_db",
-        "host": "localhost",
+        "username": "process.env.MYSQL_USER",
+        "password": "process.env.MYSQL_KEY", 
+        "database": "process.env.MYSQL_DBNAME",
+        "host": "process.env.MYSQL_HOST",
         "dialect": "mysql"
     },
  
