--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.42.0"
-  }
+  },
+  "engines": {
+    "node": "8.1.1",
+    "npm": "5.0.3"
+  },
 }
