config.json added 127.0.0.1 to host

--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
         "username": "root",
         "password": "password", 
         "database": "triplan_db",
-        "host": "localhost",
+        "host": "127.0.0.1",
         "dialect": "mysql"
     },
  
@@ -12,7 +12,7 @@
         "username": "root",
         "password": "password", 
         "database": "triplan_db",
-        "host": "localhost",
+        "host": "127.0.0.1",
         "dialect": "mysql"
     },
 
