--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     },
 
     "production": {
-        "use_env_varible": "JAWSDB_URL",
+        "use_env_variable": "JAWSDB_URL",
         "dialect": "mysql"
 }
  
